# griptape-trade-school

./: .env.example  .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: course-suggestion.md
.github/actions/init-environment/: action.yml
.github/workflows/: code-checks.yml  framework-release-integration-tests.yml  preview-links.yml
docs/: contributing.md  course-levels.md  courses.md  faq.md  index.md  troubleshooting.md
docs/100/: index.md
docs/100/setup/: 01_setting_up_environment.md  02_openai.md  03_griptape.md  04_helpful_resources.md  index.md
docs/100/workflows/: index.md
docs/200/: index.md
docs/200/chatbot-rulesets/: 01_setting_up_environment.md  02_create_an_agent.md  03_the_chat_utility.md  04_hide_the_logs.md  05_personality_with_rulesets.md  06_adding_manual_chat.md  07_manners_maketh_the_bot.md  08_adding_another_ruleset_for_output.md  09_formatting_chat_output.md  10_markdown_madness.md  11_gleaming_the_chat.md  12_multiple_personas.md  13_adding_personality_colors.md  14_making_it_quick.md  index.md
docs/200/compare-movies-workflow/: 01_setup.md  02_concepts.md  03_first_workflow.md  04_adding_flexibility.md  05_using_tools.md  06_workflow_outputs.md  index.md
docs/300/: index.md
docs/400/: index.md
docs/assets/css/: extra.css
docs/courses/chatbot-rulesets/: .env.example  .pages  01_setting_up_environment.md  03_the_chat_utility.md  04_hide_the_logs.md  04_show_the_logs.md  05_personality_with_rulesets.md  06_adding_manual_chat.md  (+9 more)
docs/overrides/: 404.html  hero.html
docs/setup/: .pages  01_setting_up_environment.md  02_openai.md  03_griptape.md  04_helpful_resources.md  index.md
site/: 404.html  index.html
site/100/: index.html
site/200/: index.html
site/300/: index.html
site/400/: index.html
site/contributing/: index.html
site/courses/: index.html
site/faq/: index.html
site/js/: adjust-button.js
site/overrides/: hero.html  main.html
site/search/: search_index.json
site/setup/: index.html
site/troubleshooting/: index.html
templates/: code_annotation_examples.md
test/integration/: check_code_blocks.py  test_code_blocks.py  test_code_reviews.py
(+235 files in other folders)
