[tool.poetry]
name = "griptape-trade-school"
version = "0.1.0"
description = ""
authors = ["Jason Schleifer <jason.schleifer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
mkdocs-glightbox = "^0.4.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
python-dotenv = "^1.0.1"
pytest-xdist = "^3.3.1"
griptape = {version="^0.28.2", extras=["all"]}


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.372"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["griptape"]
exclude = [
    "**/__pycache__",
]
pythonVersion = "3.9"
reportOptionalMemberAccess = "none"
reportIncompatibleVariableOverride = "none" # see thread: https://github.com/microsoft/pyright/issues/5933 
enableExperimentalFeatures = true # https://github.com/microsoft/pyright/issues/7713

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
